# vlfs

./: .gitignore  README.md  VLFSSync.cmake  pyproject.toml  requirements.txt  vlfs.py
.github/workflows/: ci.yml
tests/: conftest.py
tests/fixtures/example_repo/: CMakeLists.txt  main.cpp
tests/repro/: test_missing_auth.py
tests/unit/: test_bulk_push.py  test_cli.py  test_cmake.py  test_config_bucket.py  test_diagnostics.py  test_drive.py  test_example_repo.py  test_glob_support.py  test_http_download.py  test_index.py  test_logging.py  test_ls.py  test_performance.py  test_pull_skip.py  test_push_r2.py  test_r2_auth.py  test_rclone.py  test_rclone_batch.py  test_remove.py  test_robustness.py  test_safety.py  test_security.py  test_storage.py  test_transfer.py
